--- a/pages/login/signin.html
+++ b/pages/login/signin.html
@@ -30,7 +30,7 @@
                 <div class="signin-content">
                     <div class="signin-image">
                         <figure><img src="images/signin-image.jpg" alt="sing up image"></figure>
-                        <a href="C:\Users\Administrator\Desktop\HER2019\Library-master\pages\login\login.html" class="signup-image-link">Create an account</a>
+                        <a href="login.html" class="signup-image-link">Create an account</a>
                     </div>
 
                     <div class="signin-form">
@@ -49,8 +49,7 @@
                                 <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember me</label>
                             </div>
                             <div class="form-group form-button">
-                                <input type="submit" name="signin" id="signin" class="form-submit" value="Log in as librarian"/>
-                                <input type="submit" name="signin" class="form-submit" value="Log in as user"/>
+                                <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
                             </div>
                         </form>
                         <div class="social-login">
