--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pages/login/signin.html">Logout</a>
+              </li>
             </ul>
 
             
@@ -74,7 +77,7 @@
             <div class="row slider-text align-items-center justify-content-center">
               <div class="col-md-8 text-center col-sm-12 ">
                 <h1 data-aos="fade-up mb-5">Read, Learn at HER Library</h1>
-                <strong data-aos="fade-up" data-aos-delay="200"><a href="#" class="btn btn-white btn-outline-white">Sign in</a></strong>
+                <strong data-aos="fade-up" data-aos-delay="200"><a href="pages/login/signin.html" class="btn btn-white btn-outline-white">Sign in</a></strong>
               </div>
             </div>
           </div>
@@ -85,7 +88,7 @@
             <div class="row slider-text align-items-center justify-content-center">
               <div class="col-md-8 text-center col-sm-12 ">
                 <h1 data-aos="fade-up mb-5">Enjoy your cup of tea while reading</h1>
-                <p data-aos="fade-up" data-aos-delay="200"><a href="#" class="btn btn-white btn-outline-white">Sign in</a></p>
+                <p data-aos="fade-up" data-aos-delay="200"><a href="pages/login/signin.html" class="btn btn-white btn-outline-white">Sign in</a></p>
               </div>
             </div>
           </div>
