--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -66,7 +66,7 @@
                     </div>
                     <div class="signup-image">
                         <figure><img src="images/signup-image.jpg" alt="sing up image"></figure>
-                        <a href="C:\Users\Administrator\Desktop\HER2019\Library-master\pages\login\signin.html" class="signup-image-link">I am already member</a>
+                        <a href="signin.html" class="signup-image-link">I am already member</a>
                     </div>
                 </div>
             </div>
