--- a/recipes.html
+++ b/recipes.html
@@ -46,7 +46,7 @@
                 <a class="nav-link active" href="recipes.html">Books</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="services.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Services</a>
+                <a class="nav-link dropdown-toggle" href="services.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown04">
                   <a class="dropdown-item" href="services.html">Delicious Food</a>
                   <a class="dropdown-item" href="services.html">Enjoy Drinks</a>
