--- a/recipes.html
+++ b/recipes.html
@@ -46,11 +46,11 @@
                 <a class="nav-link active" href="recipes.html">Books</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="services.html" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search</a>
+                <a class="nav-link dropdown-toggle"  id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown04">
-                  <a class="dropdown-item" href="services.html">Delicious Food</a>
-                  <a class="dropdown-item" href="services.html">Enjoy Drinks</a>
-                  <a class="dropdown-item" href="services.html">Eat All You Can</a>
+                  <a class="dropdown-item" href="pages/search/searchbook.html">Search Book</a>
+                  <a class="dropdown-item" href="services.html">Borrowed Books</a>
+                  <a class="dropdown-item" href="services.html">My History</a>
                 </div>
               </li>
               <li class="nav-item">
@@ -61,6 +61,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contact.html">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="pages/login/signin.html">Logout</a>
               </li>
             </ul>
 
@@ -251,6 +254,7 @@
               <li><a href="#">Terms of Use</a></li>
               <li><a href="#">Disclaimers</a></li>
               <li><a href="#">Contact</a></li>
+
             </ul>
           </div>
           <div class="col-md-3">
@@ -262,7 +266,7 @@
             <p>
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+<!-- Link back to Colorlib can'Ft be removed. Template is licensed under CC BY 3.0. -->
 
             </p>
           </div>
