--- a/pages/search/searchbook.html
+++ b/pages/search/searchbook.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -51,14 +50,14 @@
                 <a class="nav-link" href="../../index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" href="../../recipes.html">Books</a>
+                <a class="nav-link" href="../../recipes.html">Books</a>
               </li>
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search</a>
+                <a class="nav-link active dropdown-toggle" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown04">
                   <a class="dropdown-item" >Search Book</a>
-                  <a class="dropdown-item" href="../../services.html">Borrowed Books</a>
-                  <a class="dropdown-item" href="../../services.html">My History</a>
+                  <a class="dropdown-item" href="../borrowedbooks/borrowedbooks.html">Borrowed Books</a>
+                  <a class="dropdown-item" href="../history/history.html">My History</a>
                 </div>
               </li>
               <li class="nav-item">
