--- a/recipes.html
+++ b/recipes.html
@@ -49,8 +49,8 @@
                 <a class="nav-link dropdown-toggle"  id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Search</a>
                 <div class="dropdown-menu" aria-labelledby="dropdown04">
                   <a class="dropdown-item" href="pages/search/searchbook.html">Search Book</a>
-                  <a class="dropdown-item" href="services.html">Borrowed Books</a>
-                  <a class="dropdown-item" href="services.html">My History</a>
+                  <a class="dropdown-item" href="pages/borrowedbooks/borrowedbooks.html">Borrowed Books</a>
+                  <a class="dropdown-item" href="pages/history/history.html">My History</a>
                 </div>
               </li>
               <li class="nav-item">
