--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|DM+Serif+Display:400,400i&display=swap" rel="stylesheet">
 
+    <link rel="shortcut icon" href="ftco-32x32.png">
+
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800" rel="stylesheet">
 
     <link rel="stylesheet" href="css/bootstrap.css">
@@ -24,6 +26,26 @@
 
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
+    <script src="register.js"></script>
+    <script src="../../lms/um.service.js"></script>
+    <script src="../../lms/permission.service.js"></script>
+    <script src="../../lms/auth.service.js"></script>
+    <script src="../../lms/encryption.helper.js"></script>
+    <script src="../../lms/model/user.js"></script>
+    <script src="../../lms/model/book.js"></script>
+    <script src="../../lms/model/library.js"></script>  
+    <script src="../../lms/model/librarian.js"></script>
+    <script src="../../lms/model/recommendation.js"></script>
+    <script src="../../lms/requests/request.js"></script>
+    <script src="../../lms/requests/request.manager.js"></script>
+    <script src="../../lms/lms.js"></script>
+    <script src="login.controller.js"></script>
+
+
+
   </head>
   <body>
     
