--- a/pages/login/signin.html
+++ b/pages/login/signin.html
@@ -7,6 +7,7 @@
     <title>Library</title>
     <link rel="stylesheet" href="fonts/material-icon/css/material-design-iconic-font.min.css">
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
     <script src="../../lms/um.service.js"></script>
     <script src="../../lms/permission.service.js"></script>
     <script src="../../lms/auth.service.js"></script>
@@ -48,9 +49,10 @@
                                 <input type="checkbox" name="remember-me" id="remember-me" class="agree-term" />
                                 <label for="remember-me" class="label-agree-term"><span><span></span></span>Remember me</label>
                             </div>
-                            <div class="form-group form-button">
+                 <!--           <div class="form-group form-button">
                                 <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
-                            </div>
+                            </div>  -->
+                            <button class="form-submit" id="signin" onclick="open()">Log in </button>
                         </form>
                         <div class="social-login">
                             <span class="social-label">Or login with</span>
