--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -56,7 +56,8 @@
                                 <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
                                 <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all statements in  <a href="#" class="term-service">Terms of service</a></label>
                             </div>
-                            <button class="form-submit" id="signup" onclick="register()"> Register</button> 
+                            <button class="form-submit" id="signup" onclick="register()"> 
+                                Register </button> 
               <!--              <div class="form-group form-button" >
                                <input type="submit" name="signup" id="signup"  class="form-submit" value="Register" /> 
                             </div> --> 
