--- a/pages/login/signin.html
+++ b/pages/login/signin.html
@@ -21,7 +21,7 @@
     <script src="../../lms/requests/request.manager.js"></script>
     <script src="../../lms/lms.js"></script>
     <script src="login.controller.js"></script>
-
+    <script src="register.js"></script>
 
 </head>
 
@@ -52,7 +52,8 @@
                  <!--           <div class="form-group form-button">
                                 <input type="submit" name="signin" id="signin" class="form-submit" value="Log in"/>
                             </div>  -->
-                            <button class="form-submit" id="signin" onclick="open()">Log in </button>
+                            <button class="form-submit" type="button" id="signin" onclick="login()">
+                                Log in </button>
                         </form>
                         <div class="social-login">
                             <span class="social-label">Or login with</span>
