--- a/index.html
+++ b/index.html
@@ -29,20 +29,19 @@
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
-    <script src="register.js"></script>
-    <script src="../../lms/um.service.js"></script>
-    <script src="../../lms/permission.service.js"></script>
-    <script src="../../lms/auth.service.js"></script>
-    <script src="../../lms/encryption.helper.js"></script>
-    <script src="../../lms/model/user.js"></script>
-    <script src="../../lms/model/book.js"></script>
-    <script src="../../lms/model/library.js"></script>  
-    <script src="../../lms/model/librarian.js"></script>
-    <script src="../../lms/model/recommendation.js"></script>
-    <script src="../../lms/requests/request.js"></script>
-    <script src="../../lms/requests/request.manager.js"></script>
-    <script src="../../lms/lms.js"></script>
-    <script src="login.controller.js"></script>
+    <script src="pages/login/register.js"></script>
+    <script src="lms/um.service.js"></script>
+    <script src="lms/permission.service.js"></script>
+    <script src="lms/auth.service.js"></script>
+    <script src="lms/encryption.helper.js"></script>
+    <script src="lms/model/user.js"></script>
+    <script src="lms/model/book.js"></script>
+    <script src="lms/model/library.js"></script>
+    <script src="lms/model/librarian.js"></script>
+    <script src="lms/model/recommendation.js"></script>
+    <script src="lms/requests/request.js"></script>
+    <script src="lms/requests/request.manager.js"></script>
+    <script src="lms/lms.js"></script>
 
 
 
