--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -21,7 +21,6 @@
     <script src="../../lms/requests/request.js"></script>
     <script src="../../lms/requests/request.manager.js"></script>
     <script src="../../lms/lms.js"></script>
-    <script src="login.controller.js"></script>
     
 
 </head>
@@ -56,7 +55,7 @@
                                 <input type="checkbox" name="agree-term" id="agree-term" class="agree-term" />
                                 <label for="agree-term" class="label-agree-term"><span><span></span></span>I agree all statements in  <a href="#" class="term-service">Terms of service</a></label>
                             </div>
-                            <button class="form-submit" id="signup" onclick="register()"> 
+                            <button class="form-submit" type="button" id="signup" onclick="register()">
                                 Register </button> 
               <!--              <div class="form-group form-button" >
                                <input type="submit" name="signup" id="signup"  class="form-submit" value="Register" /> 
