--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
 
-
+    <script src="main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
     <script src="pages/login/register.js"></script>
     <script src="lms/um.service.js"></script>
@@ -46,7 +46,7 @@
 
 
   </head>
-  <body>
+  <body onload="getLibrary()">
     
     <header role="banner">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark">
