--- a/pages/borrowedbooks/borrowedbooks.html
+++ b/pages/borrowedbooks/borrowedbooks.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Gourmet &mdash; Colorlib Website Template</title>
+  <title>HER Library</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -16,7 +16,7 @@
 
   <link rel="stylesheet" href="../../css/magnific-popup.css">
   <script type="text/javascript" src="borrowedbooks.js"></script>
-
+  <script type="module" src="../../main.js"></script>
   <link rel="stylesheet" href="../../fonts/ionicons/css/ionicons.min.css">
   <link rel="stylesheet" href="../../fonts/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../../fonts/flaticon/font/flaticon.css">
