--- a/index.html
+++ b/index.html
@@ -27,26 +27,27 @@
     <!-- Theme Style -->
     <link rel="stylesheet" href="css/style.css">
 
-    <script src="main.js"></script>
+    <script type="module" src="main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
-    <script src="pages/login/register.js"></script>
+    <script type="text/javascript" src="pages/login/register.js"></script>
     <script src="lms/um.service.js"></script>
     <script src="lms/permission.service.js"></script>
     <script src="lms/auth.service.js"></script>
     <script src="lms/encryption.helper.js"></script>
     <script src="lms/model/user.js"></script>
     <script src="lms/model/book.js"></script>
-    <script src="lms/model/library.js"></script>
+    <script  type="module"  src="lms/model/library.js"></script>
     <script src="lms/model/librarian.js"></script>
     <script src="lms/model/recommendation.js"></script>
     <script src="lms/requests/request.js"></script>
     <script src="lms/requests/request.manager.js"></script>
-    <script src="lms/lms.js"></script>
+    <script src="lms/lms.js" ></script>
+    <script type="module" src="pages/borrowedbooks/borrowedbooks.js"></script>
 
 
 
   </head>
-  <body onload="getLibrary()">
+  <body onload="ctrl.getLibrary">
     
     <header role="banner">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark">
@@ -75,7 +76,7 @@
                 <a class="nav-link" href="contact.html">Contact</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/login/signin.html">Logout</a>
+                <a class="nav-link" onclick="logout()" href="pages/login/signin.html">Logout</a>
               </li>
             </ul>
 
