--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <script src="lms/encryption.helper.js"></script>
     <script src="lms/model/user.js"></script>
     <script src="lms/model/book.js"></script>
-    <script  type="module"  src="lms/model/library.js"></script>
+    <script src="lms/model/library.js"></script>
     <script src="lms/model/librarian.js"></script>
     <script src="lms/model/recommendation.js"></script>
     <script src="lms/requests/request.js"></script>
