--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
     <script src="lms/requests/request.manager.js"></script>
     <script src="lms/lms.js" ></script>
     <script type="module" src="pages/borrowedbooks/borrowedbooks.js"></script>
+    <script type="module" src="pages/history/history.js"></script>
+    <script type="module" src="pages/search/searchbook.js"></script>
 
 
 
