--- a/recipes.html
+++ b/recipes.html
@@ -25,7 +25,24 @@
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
 
     <!-- Theme Style -->
-    <link rel="stylesheet" href="css/style.css">
+    <script type="module" src="main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
+    <script type="text/javascript" src="pages/login/register.js"></script>
+    <script src="lms/um.service.js"></script>
+    <script src="lms/permission.service.js"></script>
+    <script src="lms/auth.service.js"></script>
+    <script src="lms/encryption.helper.js"></script>
+    <script src="lms/model/user.js"></script>
+    <script src="lms/model/book.js"></script>
+    <script src="lms/model/library.js"></script>
+    <script src="lms/model/librarian.js"></script>
+    <script src="lms/model/recommendation.js"></script>
+    <script src="lms/requests/request.js"></script>
+    <script src="lms/requests/request.manager.js"></script>
+    <script src="lms/lms.js" ></script>
+    <script type="module" src="pages/borrowedbooks/borrowedbooks.js"></script>
+    <script type="module" src="pages/history/history.js"></script>
+    <script type="module" src="pages/search/searchbook.js"></script>
   </head>
   <body>
     
