--- a/pages/borrowedbooks/borrowedbooks.html
+++ b/pages/borrowedbooks/borrowedbooks.html
@@ -8,7 +8,9 @@
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|DM+Serif+Display:400,400i&display=swap" rel="stylesheet">
 
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800" rel="stylesheet">
-
+  <script type="module" src="../../main.js"></script>
+  <script src="../../lms/model/library.js"></script>
+  <script src="../../lms/model/user.js"></script>
   <link rel="stylesheet" href="../../css/bootstrap.css">
   <link rel="stylesheet" href="../../css/animate.css">
   <link rel="stylesheet" href="../../css/owl.carousel.min.css">
@@ -16,7 +18,6 @@
 
   <link rel="stylesheet" href="../../css/magnific-popup.css">
   <script type="text/javascript" src="borrowedbooks.js"></script>
-  <script type="module" src="../../main.js"></script>
   <link rel="stylesheet" href="../../fonts/ionicons/css/ionicons.min.css">
   <link rel="stylesheet" href="../../fonts/fontawesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="../../fonts/flaticon/font/flaticon.css">
