--- a/pages/search/searchbook.html
+++ b/pages/search/searchbook.html
@@ -8,7 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|DM+Serif+Display:400,400i&display=swap" rel="stylesheet">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800" rel="stylesheet">
-
+    <script type="module" src="../../main.js"></script>
+    <script src="../../lms/model/library.js"></script>
+    <script src="../../lms/model/user.js"></script>
     <link rel="stylesheet" href="../../css/bootstrap.css">
     <link rel="stylesheet" href="../../css/animate.css">
     <link rel="stylesheet" href="../../css/owl.carousel.min.css">
