--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <script type="module" src="pages/borrowedbooks/borrowedbooks.js"></script>
     <script type="module" src="pages/history/history.js"></script>
     <script type="module" src="pages/search/searchbook.js"></script>
+    <script type="module" src="pages/login/register.js"></script>
 
 
 
