--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -21,7 +21,7 @@
     <script src="../../lms/requests/request.js"></script>
     <script src="../../lms/requests/request.manager.js"></script>
     <script src="../../lms/lms.js"></script>
-    
+    <script src="../../main.js"></script>
 
 </head>
 <body>
