--- a/recipes.html
+++ b/recipes.html
@@ -19,7 +19,7 @@
 
     <link rel="stylesheet" href="css/magnific-popup.css">
 
-
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="fonts/ionicons/css/ionicons.min.css">
     <link rel="stylesheet" href="fonts/fontawesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
@@ -43,6 +43,7 @@
     <script type="module" src="pages/borrowedbooks/borrowedbooks.js"></script>
     <script type="module" src="pages/history/history.js"></script>
     <script type="module" src="pages/search/searchbook.js"></script>
+    <script type="module" src="pages/login/register.js"></script>
   </head>
   <body>
     
