--- a/pages/search/searchbook.html
+++ b/pages/search/searchbook.html
@@ -63,6 +63,9 @@
                 </div>
               </li>
               <li class="nav-item">
+                <a class="nav-link " href="../addbook/addbook.html">Add Book</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link " href="../../about.html">About</a>
               </li>
               <li class="nav-item">
