--- a/recipes.html
+++ b/recipes.html
@@ -72,6 +72,9 @@
                 </div>
               </li>
               <li class="nav-item">
+                <a class="nav-link " href="pages/addbook/addbook.html">Add Book</a>
+              </li>
+              <li class="nav-item">
                 <a class="nav-link " href="about.html">About</a>
               </li>
               <li class="nav-item">
