take, recommend, renewal, return buttons

--- a/pages/search/searchbook.html
+++ b/pages/search/searchbook.html
@@ -11,11 +11,11 @@
     <script type="module" src="../../main.js"></script>
     <script src="../../lms/model/library.js"></script>
     <script src="../../lms/model/user.js"></script>
+    <script src="../../lms/model/book.js"></script>
     <link rel="stylesheet" href="../../css/bootstrap.css">
     <link rel="stylesheet" href="../../css/animate.css">
     <link rel="stylesheet" href="../../css/owl.carousel.min.css">
     <link rel="stylesheet" href="../../css/aos.css">
-
     <link rel="stylesheet" href="../../css/magnific-popup.css">
     <script type="text/javascript" src="searchbook.js"></script>
 
