--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     <script type="module" src="pages/history/history.js"></script>
     <script type="module" src="pages/search/searchbook.js"></script>
     <script type="module" src="pages/login/register.js"></script>
+    <script type="module" src="pages/addbook/addbook.js"></script>
 
 
 
