--- a/recipes.html
+++ b/recipes.html
@@ -26,6 +26,7 @@
 
     <!-- Theme Style -->
     <script type="module" src="main.js"></script>
+    <script type="module" src="init.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/crypto-js.min.js"></script>
     <script type="text/javascript" src="pages/login/register.js"></script>
     <script src="lms/um.service.js"></script>
@@ -44,6 +45,8 @@
     <script type="module" src="pages/history/history.js"></script>
     <script type="module" src="pages/search/searchbook.js"></script>
     <script type="module" src="pages/login/register.js"></script>
+
+    <script type="module" src="pages/addbook/addbook.js"></script>
   </head>
   <body>
     
