--- a/pages/search/book.html
+++ b/pages/search/book.html
@@ -129,10 +129,8 @@
         <div class="col-md-6">
             <div class="sched d-block d-lg-flex">
                 <div class="bg-image" style="background-image: url('../../img/dishes_1.jpg');" data-aos="fade"></div>
-                <div class="text">
-                    <h2>Name</h2>
-                    <p>Author</p>
-                    <p>ID</p>
+                <div class="text" id="text">
+
                 </div>
             </div>
         </div>
