--- a/pages/search/book.html
+++ b/pages/search/book.html
@@ -135,14 +135,9 @@
             </div>
         </div>
         <div class="btn-group">
-            <button class="submitButton" type="button" id="Take" onclick="takeBook()">
-                Take Book</button>
             <button class="submitButton" type="button" id="Recommend" onclick="recommendBook()">
                 Recommend Book</button>
-            <button class="submitButton" type="button" id="Renewal" onclick="renewalBook()">
-                Renewal Book</button>
-            <button class="submitButton" type="button" id="Return" onclick="returnBook()">
-                Return Book</button>
+            <div id="btn-group"></div>
         </div>
     </div>
 
