--- a/pages/search/searchbook.html
+++ b/pages/search/searchbook.html
@@ -12,6 +12,7 @@
     <script src="../../lms/model/library.js"></script>
     <script src="../../lms/model/user.js"></script>
     <script src="../../lms/model/book.js"></script>
+    <script src="../../lms/model/recommendation.js"></script>
     <link rel="stylesheet" href="../../css/bootstrap.css">
     <link rel="stylesheet" href="../../css/animate.css">
     <link rel="stylesheet" href="../../css/owl.carousel.min.css">
