--- a/pages/search/searchbook.html
+++ b/pages/search/searchbook.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800|DM+Serif+Display:400,400i&display=swap" rel="stylesheet">
-
+    <script src="../../package/dist/sweetalert2.all.js"></script>
+    <script src="../../package/dist/sweetalert2.js"></script>
+    <link rel = 'stylesheet' href = "../../package/dist/sweetalert2.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700,800" rel="stylesheet">
     <script type="module" src="../../main.js"></script>
     <script src="../../lms/model/library.js"></script>
